db-pod.yml
apiVersion: "v1"
kind: Pod
metadata:
  name: postgres
  labels:
    name: postgres
    app: ularc
spec:
  containers:
    - name: postgres
      image: daleksandrov/ularc-postgres
      ports:
        - containerPort: 5432 
          protocol: TCP
