ularc-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ularc-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ularc
    spec:
      containers:
      - name: nginx
        image: daleksandrov/nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: /usr/src/app/
          name: static-folder
      - name: redis
        image: redis:latest
        ports:
          - containerPort: 6379
            name: redis
            protocol: TCP
      - name: ularc
        image: daleksandrov/ularc
        command: ["/bin/bash", "-c"]
        args: ["./ularc/deploy/docker/bin/wait-for-it.sh postgres"]
        ports:
          - containerPort: 8010
            name: http
            protocol: TCP
      - name: celery
        image: daleksandrov/ularc
        command: ["/bin/bash", "-c"]
        args: ["celery --app=ularc._celery:app worker --loglevel=INFO --concurrency=10 --logfile=/tmp/celery.log"]
      nodeSelector:
        name: ularc
      volumes:
        - name: static-folder
          hostPath:
            path: /usr/src/app/
