db-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    name: postgres
    app: ularc
spec:
  ports:
  - port: 5432
    name: postgres 
    targetPort: 5432
  selector:
    name: postgres
    app: ularc
