ngnix-service.yml
kind: Service
apiVersion: v1
metadata:
  name: web-service
spec:
  selector:
    name: ularc
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
