ularc-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: web
  labels:
    app: ularc
spec:
  selector:
    app: ularc
  type: NodePort
  ports:
   - port: 80
     name: http
     targetPort: 80
     nodePort: 30000
     protocol: TCP
