ularc-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ularc-ingress
spec:
  rules:
  - host: ularc.poc-nl.jnpr.net
    http:
      paths:
      - path: /
        backend:
          serviceName: web
          servicePort: 80
